[package]
name = "struct-threads"
version = "1.0.1"
edition = "2024"
authors = ["Davíd Lishchyshen <david@daika.dev>"]
description = "A simple library providing a Thread extension trait for Runnable tasks."
license = "MIT"
readme = "README.md"
repository = "https://github.com/AsfhtgkDavid/struct-threads"
keywords = ["thread", "runnable", "struct", "task"]
categories = ["concurrency", "rust-patterns"]
[dependencies]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "par_run"
harness = false