[package]
name = "struct-threads"
version = "1.1.1"
edition = "2024"
authors = ["Davíd Lishchyshen <david@daika.dev>"]
description = "A simple library providing a Thread extension trait for Runnable tasks."
license = "MIT"
readme = "README.md"
repository = "https://github.com/AsfhtgkDavid/struct-threads"
keywords = ["thread", "runnable", "struct", "task"]
categories = ["concurrency", "rust-patterns"]

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
tokio = { version = "1.49.0", optional = true,features = ["rt"] }

[dev-dependencies]
criterion = "0.8.2"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "time", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "par_run"
harness = false
